--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,6 @@
 # Core AI orchestration
 crewai>=0.1.0
+crewai[tools]
 
 # LLM providers
 openai>=0.27.0
@@ -14,3 +15,10 @@ javalang>=0.13.0
 
 # eventually to add testing
 pytest>=7.2.0
+
+mdutils
+
+torch==2.7.0
+torchaudio==2.7.0
+torchvision==0.22.0
+transformers==4.51.3
