a lot of work!!!!

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,19 @@ test/train_dataset_*.json
 test/MNIST
 /src/assessment_crew/temp_codebase
 /assessment_crew/temp_codebase
+/src/1-documentation
+/src/1-documentation-1
+/src/1-documentation-2
+/src/1-documentation-3
+/src/1-documentation-4
+/src/1-documentation-5
+/src/1-documentation-6
+/src/1-documentation-7
+/src/1-documentation-8
+/src/1-documentation-9
+/src/1-documentation-10
+/src/1-documentation-11
+/src/1-documentation-12
+/src/1-documentation-13
+/src/1-documentation-14
+/src/1-documentation-15
