--- a/src/1-codegen-work/code/code/pom.xml
+++ b/src/1-codegen-work/code/code/pom.xml
@@ -13,7 +13,10 @@
     <!-- Build the shared util first -->
     <module>kitchensink-util</module>
 
-    <!-- Then build the legacy WAR that depends on it -->
+    <!-- Then build the business JAR -->
+    <module>kitchensink-business</module>
+
+    <!-- Finally build the legacy WAR that depends on both -->
     <module>kitchensink</module>
   </modules>
 </project>
