--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ ANTHROPIC_API_KEY=YOUR_API_KEY
 OPENAI_API_KEY=YOUR_API_KEY
 SERPER_API_KEY=YOUR_API_KEY
 LANGTRACE_API_KEY=YOUR_API_KEY
+
+# needed for crew ai
+OPENAI_MODEL_NAME=gpt-4.1-2025-04-14
